--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bat-publisher",
-  "version": "0.9.1",
+  "version": "0.9.2",
   "description": "Routines to identify publishers for the BAT.",
   "main": "index.js",
   "scripts": {
@@ -25,13 +25,13 @@
   },
   "homepage": "https://github.com/brave-intl/bat-publisher",
   "dependencies": {
-    "async": "^2.0.1",
+    "async": "^2.5.0",
     "data-expression": "1.0.0",
-    "glob": "^7.0.6",
+    "glob": "^7.1.2",
     "joi": "^10.6.0",
-    "jsdom": "11.1.0",
+    "jsdom": "11.2.0",
     "random-lib": "2.1.0",
-    "tldjs": "2.0.0",
+    "tldjs": "2.2.0",
     "underscore": "1.8.3",
     "underscore.string": "3.3.4"
   },
@@ -40,18 +40,12 @@
     "npm": "4.2.0"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.1",
-    "del": "^3.0.0",
-    "gulp": "^3.9.0",
-    "gulp-run": "^1.7.1",
-    "gulp-standard": "^10.0.0",
-    "knodeo-http-sync": "^0.1.0",
+    "babel-eslint": "^8.0.0",
     "level": "1.7.0",
-    "nsp": "^2.7.0",
-    "run-sequence": "^2.0.0",
-    "standard": "10.0.2",
-    "tap": "^10.7.0",
-    "uuid": "3.1.0"
+    "npm-check-updates": "^2.12.1",
+    "nsp": "^2.8.0",
+    "standard": "10.0.3",
+    "tap": "^10.7.0"
   },
   "standard": {
     "parser": "babel-eslint"
