--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bat-publisher",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": "Routines to identify publishers for the BAT.",
   "main": "index.js",
   "scripts": {
@@ -25,11 +25,16 @@
   },
   "homepage": "https://github.com/brave-intl/bat-publisher",
   "dependencies": {
+    "@ambassify/backoff-strategies": "1.0.0",
     "async": "^2.5.0",
     "data-expression": "1.0.0",
     "glob": "^7.1.2",
+    "jimp": "0.2.28",
     "joi": "^11.0.3",
     "jsdom": "11.2.0",
+    "metascraper": "1.0.7",
+    "node-cache": "4.1.1",
+    "parse-cache-control": "1.0.1",
     "random-lib": "2.1.0",
     "tldjs": "2.2.0",
     "underscore": "1.8.3",
