--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bat-publisher",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "description": "Routines to identify publishers for the BAT.",
   "main": "index.js",
   "scripts": {
@@ -47,6 +47,7 @@
     "level": "1.7.0",
     "npm-check-updates": "^2.12.1",
     "nsp": "^2.8.0",
+    "oembed-parser": "^1.0.8",
     "standard": "10.0.3",
     "tap": "^10.7.2"
   },
