--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "node-cache": "4.1.1",
     "parse-cache-control": "1.0.1",
     "random-lib": "2.1.0",
+    "sharp": "^0.20.2",
     "tldjs": "2.2.0",
     "underscore": "1.8.3",
     "underscore.string": "3.3.4"
