--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@ambassify/backoff-strategies": "1.0.0",
     "async": "^2.5.0",
+    "brave-crypto": "^0.2.0",
     "data-expression": "1.0.0",
     "glob": "^7.1.2",
     "jimp": "0.2.28",
@@ -32,7 +33,6 @@
     "jsdom": "11.2.0",
     "node-cache": "4.1.1",
     "parse-cache-control": "1.0.1",
-    "random-lib": "^3.0.0",
     "tldjs": "2.2.0",
     "underscore": "1.8.3",
     "underscore.string": "3.3.4"
