--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "standard",
     "test": "npm run test-security; npm run test-logic",
-    "test-security": "nsp check",
+    "test-security": "npm audit",
     "test-logic": "tap test",
     "build-rules": "node tools/build-rules.js > rules/index.js",
     "rebuild-rules": "node tools/rebuild-rules.js categories/rulesets.json > rules/index.js",
@@ -25,7 +25,7 @@
   "dependencies": {
     "@ambassify/backoff-strategies": "1.0.0",
     "async": "^2.5.0",
-    "brave-crypto": "^0.2.0",
+    "brave-crypto": "^0.2.1",
     "data-expression": "1.0.0",
     "glob": "^7.1.2",
     "jimp": "0.2.28",
@@ -35,20 +35,18 @@
     "parse-cache-control": "1.0.1",
     "tldjs": "2.2.0",
     "underscore": "1.8.3",
-    "underscore.string": "3.3.4"
+    "underscore.string": "^3.3.5"
   },
   "engines": {
-    "node": ">=7.10.1",
-    "npm": ">=4.2.0"
+    "node": "8.9.2",
+    "npm": "5.10.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.0",
-    "level": "1.7.0",
-    "npm-check-updates": "^2.12.1",
-    "nsp": "^2.8.0",
+    "level": "^1.7.0",
     "oembed-parser": "^1.0.8",
     "standard": "10.0.3",
-    "tap": "^10.7.2"
+    "tap": "^12.1.1"
   },
   "standard": {
     "ignore": [
