--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "brave-crypto": "^0.2.1",
     "data-expression": "1.0.0",
     "glob": "^7.1.2",
-    "jimp": "0.2.28",
+    "jimp": "^0.13.0",
     "joi": "^13.1.2",
     "jsdom": "11.2.0",
     "node-cache": "4.1.1",
@@ -40,8 +40,8 @@
   "devDependencies": {
     "babel-eslint": "^8.0.0",
     "oembed-parser": "^1.0.8",
-    "standard": "10.0.3",
-    "tap": "^12.1.1"
+    "standard": "^14.3.4",
+    "tap": "^14.10.7"
   },
   "standard": {
     "ignore": [
